autumn/tests/compile-fail/path_traversal.rs
use autumn_web::prelude::*;

#[get("/../../../etc/passwd")]
async fn hacked() {}

fn main() {}
