autumn/tests/compile-fail/path_traversal.stderr
error: Route path must not contain directory traversal sequences (..)
 --> tests/compile-fail/path_traversal.rs:3:7
  |
3 | #[get("/../../../etc/passwd")]
  |       ^^^^^^^^^^^^^^^^^^^^^^
